Auto Blend is not recalculated #45865

Closed
opened 2015-08-21 13:07:44 +02:00 by Cenek Strichel · 9 comments

System Information
W10 64b

Blender Version
2.75a

Short description of error
Auto Blend is not recalculated after change length of clip. You can use Scale or End Frame.

Exact steps for others to reproduce the error

  1. Open recalculate.blend
  2. Change length of CubeAction.001 with Scale of End Frame
  3. You get this: nla.png
  4. You have to switch Auto Blend off and on for correct blend
**System Information** W10 64b **Blender Version** 2.75a **Short description of error** Auto Blend is not recalculated after change length of clip. You can use Scale or End Frame. **Exact steps for others to reproduce the error** 1) Open [recalculate.blend](https://archive.blender.org/developer/F226154/recalculate.blend) 2) Change length of CubeAction.001 with Scale of End Frame 3) You get this: ![nla.png](https://archive.blender.org/developer/F226155/nla.png) 4) You have to switch Auto Blend off and on for correct blend
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Bastien Montagne self-assigned this 2015-08-21 16:18:16 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 09b7ec1864

This issue was referenced by 09b7ec1864bbf9a2ffa0aa7297b087953b4d682a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hello again, exactly same bug become when you change Repeat

repeat.png

also very similar behaviour when you are using transition

repeatTransition.png

use scale or repeat (up and down)

Hello again, exactly same bug become when you change Repeat ![repeat.png](https://archive.blender.org/developer/F237783/repeat.png) also very similar behaviour when you are using transition ![repeatTransition.png](https://archive.blender.org/developer/F237785/repeatTransition.png) use scale or repeat (up and down)

This issue was referenced by 4269c56904

This issue was referenced by 4269c5690412975291cddf420e0a9aafa1bb8e5f

Fixed the repeat stuff. Not sure I understand what you mean with transition though? no change at all (repeat, start/end frame, scale, even mere translation in NLA view) seems to affect transition's length?

In any case, please avoid 'resurrecting' reports like that, much better and simpler to track if you make new ones. ;)

Fixed the repeat stuff. Not sure I understand what you mean with transition though? no change at all (repeat, start/end frame, scale, even mere translation in NLA view) seems to affect transition's length? In any case, please avoid 'resurrecting' reports like that, much better and simpler to track if you make new ones. ;)
Author

ok I will do another bug report with Transition bug

ok I will do another bug report with Transition bug
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45865
No description provided.