Fix T45865: Auto Blend is not recalculated when adjusting start/end/scale etc. of strip through RNA.